apps/dns/adguard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-svc
  namespace: dns
  labels:
    app-name: adguard
    version: "${ADGUARD_VERSION}"
    component: dns-server
    hostNetwork: "yes"
    internal-service: "yes"
    managed-by: chynten
    created-by: chynten
spec:
  type: ClusterIP
  ports:
    - port: 8010
      targetPort: 8010
      name: tcp
  selector:
    app-name: adguard
