apps/dns/adguard-Gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: adguard-gateway
  namespace: dns
  labels:
    app-name: adguard
    version: "${ADGUARD_VERSION}"
    component: dns-server
    hostNetwork: "yes"
    internal-service: "yes"
    managed-by: chynten
    created-by: chynten
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - $ADGUARD_DOMAIN
    tls:
      httpsRedirect: true
  - hosts:
      - $ADGUARD_DOMAIN
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: adguard-letsencrypt-certificate
